base/ecr-demo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecr-demo
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecr-demo
  template:
    metadata:
      labels:
        app: ecr-demo
    spec:
      containers:
        - name: ecr-demo
          image: 884634136969.dkr.ecr.us-east-1.amazonaws.com/openpament:c3ae61db0fc722ac486baf3881d5cf87a5446d85
          imagePullPolicy: Always
          ports:
            - containerPort: 80
